# django-polls

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Pipfile  Procfile  README.md  README.rst  TODO  docker-compose-prod_template.yml  docker-compose-prod_temple.yml  docker-compose.yml  drun  env  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  run  setup.cfg
.github/workflows/: nox-audit_multi-arch.yml  nox-coverage.yml  nox-lint_multi-arch.yml  nox-safety_multi-arch.yml
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_customuser_bio_customuser_name.py  0003_customuser_profile_pic.py  0004_customuser_country.py  0005_customuser_age.py
accounts/tests/: test_core.py
config/: settings.py  test.py  urls.py  views.py
docs/: add_polls_list.rst  conf.py  contributing.rst  features.rst  index.rst  installing.rst  package_index.rst  testing.rst
htmlcov/: class_index.html  coverage.json  d_1ea838694151cac8_test_py.html  d_1ea838694151cac8_urls_py.html  d_1ea838694151cac8_views_py.html  d_21411594f0ec1795_0001_initial_py.html  d_21411594f0ec1795_0002_customuser_bio_customuser_name_py.html  d_21411594f0ec1795_0003_customuser_profile_pic_py.html  d_21411594f0ec1795_0004_customuser_country_py.html  d_21411594f0ec1795_0005_customuser_age_py.html  d_3b2f18166c6e22ae_admin_py.html  d_3b2f18166c6e22ae_apps_py.html  d_3b2f18166c6e22ae_models_py.html  d_3b2f18166c6e22ae_urls_py.html  d_3b2f18166c6e22ae_views_py.html  d_509fd8af0f7a1b49_admin_py.html  d_509fd8af0f7a1b49_apps_py.html  d_509fd8af0f7a1b49_forms_py.html  d_509fd8af0f7a1b49_models_py.html  d_509fd8af0f7a1b49_urls_py.html  d_509fd8af0f7a1b49_views_py.html  d_83e72605eb00c427_test_models_py.html  d_83e72605eb00c427_test_urls_py.html  d_83e72605eb00c427_test_views_py.html  d_9df13ddeb1e47e46_admin_py.html  d_9df13ddeb1e47e46_apps_py.html  d_9df13ddeb1e47e46_forms_py.html  d_9df13ddeb1e47e46_models_py.html  d_9df13ddeb1e47e46_urls_py.html  d_9df13ddeb1e47e46_views_py.html  d_b88c3b5a8ce6a61b_test_forms_py.html  d_b88c3b5a8ce6a61b_test_views_py.html  d_bd95666ab3e9e898_0001_initial_py.html  d_dfdacaa496597cde_factories_py.html  d_dfdacaa496597cde_test_core_py.html  d_dfdacaa496597cde_test_forms_py.html  d_dfdacaa496597cde_test_models_py.html  d_dfdacaa496597cde_test_urls_py.html  d_dfdacaa496597cde_test_views_py.html  function_index.html  (+32 more)
pages/: tests.py  urls.py  views.py
pages/tests/: test_views.py
polls/: admin.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/: _base.html
polls/templates/polls/: _base.html  about.html  detail.html  home.html  index.html  results.html
polls/tests/: factories.py  test_models.py  test_views.py
static/css/: base.css  style.css
staticfiles/: staticfiles.json
staticfiles/css/: base.26742a454d46.css  base.css  base.eb0334edcb64.css
templates/: base.html  home.html  profile.html
templates/account/: base.html  email.html  email_confirmation_message.txt  email_confirmation_subject.txt  login.html  logout.html  password_change.html  password_reset.html  password_reset_from_key.html  signup.html  user_detail.html  user_form.html
templates/account/email/: email_confirmation_message.txt  email_confirmation_subject.txt
templates/admin/: base_site.html
templates/pages/: about.html  contact.html  home.html  success.html
templates/polls/: detail.html  index.html  poll_detail.html  poll_list.html  poll_results.html  results.html
templates/registration/: login.html  logout.html  signup.html
