[tool.black]
line-length = 119
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | pages/migrations
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
skip = ["*.gitignore"]
extend_skip = ["*.md", "*.json"]
line_length = 119

[tool.poetry]
name = "django_polls"
version = "0.1.0"
description = "A basic poll application built with Django"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
environs = {extras = ["django"], version = "^9.5.0"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools=^61.2.0", "wheel"]
build-backend = ["poetry.core.masonry.api", "setuptools.build_meta:__legacy__"]
