[tool.black]
line-length = 79
# include =
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
  | .venv
  | alembic
  | staticfiles
  | build
  | dist
  | accounts/migrations/0001_initial.py
  | polls/migrations/0001_initial.py
  | ^.*\b(migrations)\b.*$
)/
'''

[tool.coverage.paths]
source = ["accounts", "config", "pages", "polls"]

[tool.coverage.run]
branch = true
source = ["config"]
omit = [
    "*conftest.py",
    "*manage.py",
    "*settings*.py",
    "*test.py",
    "*wsgi.py",
    "*/__init__.py",
    "*/migrations/*",
    "*/factories.py",
    "*/tests/*",
]
plugins = [
    "django_coverage_plugin",
]

[tool.coverage.django_coverage_plugin]
template_extensions = "html, txt, tex, email"

[tool.coverage.report]
show_missing = true

[tool.poetry]
name = "django_polls"
version = "0.1.0"
description = "A basic poll application built with Django"
authors = ["Kevin Bowen <kevin.bowen@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.7"
environs = {extras = ["django"], version = "^9.5.0"}
django-crispy-forms = "^2.0"
django-extensions = "^3.1.5"
django-allauth = "^0.54.0"
psycopg2-binary = "^2.9.5"
Pillow = "^9.1.1"
django-countries = "^7.3.2"
whitenoise = "^6.2.0"
gunicorn = "~=20.1.0"
crispy-bootstrap4 = "^2022.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
flake8 = "^6.0.0"
black = "^23.0.0"
django-debug-toolbar = "^4.0.0"
coverage = {extras = ["toml"], version = "^7.0.0"}
pytest-cov = "^4.0.0"
pytest-django = "^4.5.2"
django-test-plus = "^2.2.0"
pytest-sugar = "^0.9.4"
ipython = "^8.4.0"
friendly = "^0.7.0"
colorama = "^0.4.4"
nox = "^2022.1.7"
flake8-bandit = "^4.1.0"
flake8-black = "^0.3.3"
flake8-bugbear = "^23.0.0"
flake8-docstrings = "^1.6.0"
safety = "2.4.0b1"
factory-boy = "^3.2.0"
django-coverage-plugin = "^3.0.0"
pip-check = "^2.7"
pip-audit = "^2.4.3"
Sphinx = "^6.0.0"
flake8-import-order = "^0.18.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = [
    # "ignore::django.utils.deprecation.RemovedInDjango50Warning",
]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools=^61.2.0", "wheel"]
build-backend = ["poetry.core.masonry.api", "setuptools.build_meta:__legacy__"]
