[metadata]
name = django_polls
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = https://github.com/kevinbowen777/django_polls/
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.0.3

[flake8]
exclude = build,.git,.tox,./tests/,.env,migrations/
extend-ignore = E203
max-line-length = 119
per-file-ignores =

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = django
