[metadata]
name = django_polls
version = 0.1
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = https://github.com/kevinbowen777/django_polls/
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
exclude =
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    polls/migrations/*,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 119
per-file-ignores =
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
