[metadata]
name = django-polls
version = 0.1.0
description = A Django app to conduct web-based polls.
long_description = file: README.rst
url = https://github.com/kevinbowen777/django_polls.git
author = Kevin Bowen
author_email = kevin.bowen@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[flake8]
# https://flake8.pycqa.org/en/latest/user/configuration.html
select = B,B9,BLK,C,E,F,I,S,W
exclude =
    conftest.py
    # No need to traverse git directory
    .git,
    # Skip cache directories
    __pycache__,
    build,
    .env,
    accounts/migrations/0001_initial.py,
    polls/migrations/0001_initial.py,
    accounts/migrations/*,
    polls/migrations/*,
    staticfiles/,
    dist,
    images/
# https://www.flake8rules.com
ignore =
    # Missing docstring in public class
    D101
    # Missing docstring in public method
    D102
    # falsely triggers on list slicing
    E203
    # import at top, avoid circular imports
    E402
    # bare except
    E722
max-line-length = 79
per-file-ignores =
    accounts/tests.py:S101,S106
    accounts/tests/*:S101,S106
    config/tests.py:S101,S106
    config/tests/*:S101,S106
    pages/tests.py:S101,S106
    pages/tests/*:S101,S106
    polls/tests.py:S101,S106
    polls/tests/*:S101,S106
    # __init__ exports names
    # app/crud/__init__.py: F401
    # app/schemas/__init__.py: F401
    # app/tests/conftest.py: E501
